--- a/GreenGardenClient/GreenGardenClient/Views/GearManagement/Index.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/GearManagement/Index.cshtml
@@ -621,7 +621,7 @@
            
 
             <li class="app-menu__item active">
-                <a class="app-menu__link" href="~/FoodAndDrink/Index">
+                <a class="app-menu__link" href="~/GearManagement/Index">
                     <i class='app-menu__icon bx bx-wrench'></i> <!-- Gear/Tools icon -->
                     <span class="app-menu__label">Quản lý dụng cụ</span>
                 </a>
