--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderCancel.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderCancel.cshtml
@@ -29,8 +29,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <!-- DataTables CSS and JS -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
-    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/dataTables.foundation.min.css">
+    <script src="https://cdn.datatables.net/1.10.24/js/dataTables.foundation.min.js"></script>
 
     <!-- SweetAlert JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
@@ -709,7 +709,24 @@
         });
 
     </script>
-
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable({
+                language: {
+                    paginate: {
+                        previous: "Trước",
+                        next: "Sau"
+                    },
+                    info: "Hiển thị _START_ đến _END_ của _TOTAL_ mục",
+                    lengthMenu: "Hiển thị _MENU_ mục",
+                    search: "Tìm kiếm:",
+                    zeroRecords: "Không tìm thấy dữ liệu phù hợp",
+                    infoEmpty: "Không có dữ liệu để hiển thị",
+                    infoFiltered: "(lọc từ tổng số _MAX_ mục)"
+                }
+            });
+        });
+    </script>
 
 
     <script src="~/js/jquery-3.2.1.min.js"></script>
