--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderToday.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderToday.cshtml
@@ -45,8 +45,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <!-- DataTables CSS and JS -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
-    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/dataTables.foundation.min.css">
+    <script src="https://cdn.datatables.net/1.10.24/js/dataTables.foundation.min.js"></script>
 
     <!-- SweetAlert JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
