--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/UpdateGear.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/UpdateGear.cshtml
@@ -3,11 +3,46 @@
 
 @using GreenGardenClient.Models
 
+
+@{
+    if (ViewBag.Notification != null)
+    {
+        <div id="notification" class="alert alert-warning" role="alert">
+            @ViewBag.Notification
+        </div>
+    }
+}
+<style>
+    #notification {
+        position: fixed;
+        top: 20px; /* Khoảng cách từ đầu trang */
+        right: 20px; /* Khoảng cách từ bên phải */
+        z-index: 1050; /* Đảm bảo thông báo nằm trên các phần tử khác */
+        opacity: 1; /* Bắt đầu với độ mờ là 1 */
+        transition: opacity 1s ease-out, transform 1s ease-out; /* Hiệu ứng chuyển đổi cho độ mờ và biến đổi */
+        transform: translateY(-10px); /* Đưa thông báo lên một chút */
+        width: auto; /* Hoặc thay đổi thành một giá trị cụ thể, ví dụ: 300px */
+        max-width: 300px; /* Giới hạn chiều rộng tối đa */
+        padding: 15px; /* Khoảng cách bên trong cho thông báo */
+    }
+</style>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        if ($("#notification").length) {
+            setTimeout(function () {
+                $("#notification").css("opacity", "0"); // Đặt độ mờ thành 0
+                $("#notification").css("transform", "translateY(10px)"); // Đưa thông báo xuống một chút khi ẩn
+            }, 3000); // Sau 3 giây
+        }
+    });
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <title>Danh sách nhân viên | Quản trị Admin</title>
+    <title>Đơn đang sử dung | Cập nhập đồ cắm trại</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -211,6 +246,7 @@
         border-right: 1px solid #ccc; /* Viền phải của sidebar */
     }
 
+
     .app-sidebar__user {
         display: flex;
         flex-direction: column;
@@ -315,11 +351,68 @@
             background-color: #ddd;
         }
 
+    .top-bar {
+        background-color: #f8f9fa; /* Light gray background */
+        padding: 10px 20px;
+        border-radius: 8px;
+    }
+
+        /* Link button styling */
+        .top-bar .btn {
+            margin-left: 10px;
+            color: #343a40; /* Default dark color for text */
+        }
+
+    /* Active link styling */
+    .active-link {
+        color: #ffc107 !important; /* Yellow color for active state */
+        font-weight: bold; /* Optional: make text bold when active */
+    }
+
+    /* Optional styling for the search input */
+    #searchInput {
+        max-width: 250px;
+    }
+
+    .product-details a {
+        display: inline-block;
+        padding: 5px 5px; /* Reduce padding to make the button smaller */
+        font-size: 10px; /* Smaller font size */
+        font-weight: bold;
+        color: #fff;
+        background-color: #efba6c;
+        text-decoration: none; /* Remove underline */
+        border-radius: 5px; /* Rounded corners */
+        transition: background-color 0.3s ease; /* Smooth hover transition */
+    }
+
+        .product-details a:hover {
+            background-color: #efba6c; /* Darker blue on hover */
+        }
+
+    .filter-container {
+        position: relative;
+        display: flex;
+        align-items: center;
+    }
+
+    /* Căn chỉnh các nút lọc con bên trái của nút filter */
+    #filterButtons {
+        position: absolute;
+        right: 100%; /* Đặt bên trái của nút lọc */
+        top: 0; /* Căn ngang hàng */
+        display: flex;
+        flex-direction: row; /* Sắp xếp theo hàng ngang */
+        gap: 10px; /* Khoảng cách giữa các nút */
+        padding: 5px;
+        z-index: 10; /* Đảm bảo các nút lọc nổi lên trên */
+        margin-top: -10px;
+    }
+
 </style>
 <body onload="time()" class="app sidebar-mini rtl">
     <header class="app-header" style="display: flex; align-items: center; padding: 0 15px; background-color: #f6f5f5 !important;">
-        <!-- Sidebar Toggle -->
-       
+
 
         <!-- Centered Logo -->
         <div style="flex: 500; display: flex; justify-content: center; align-items: center; padding-left: 50px;">
@@ -357,8 +450,7 @@
             else
             {
                 <img src="~/images/Avatar/@HttpContextAccessor.HttpContext.Session.GetString("Img")" alt="Trang cá nhân" class="app-sidebar__user-avatar" src="~/images/img_1.jpg" width="50px">
-            }
-            <div>
+            }               <div>
                 <p class="app-sidebar__user-designation">Xin chào</p>
 
                 <p class="app-sidebar__user-name"><b>@HttpContextAccessor.HttpContext.Session.GetString("Fullname")</b></p>
@@ -417,7 +509,6 @@
                     </li>
                 </ul>
             </li>
-
 
             <script>
                 document.addEventListener("DOMContentLoaded", function () {
@@ -520,7 +611,6 @@
                         });
                     });
                 });
-
             </script>
             <li>
                 <a class="app-menu__item" href="~/TicketManagement/Index">
@@ -569,13 +659,14 @@
     <main class="app-content">
         <div class="app-title">
             <ul class="app-breadcrumb breadcrumb side">
-                <li class="breadcrumb-item active"><a href="#"><b>Danh sách các đơn đặt</b></a><a href="#"><b>/Tạo đơn</b></a><a href="#"><b>/Đặt vé</b></a></li>
+                <li class="breadcrumb-item active">Quản lí đơn hàng/Tạo đơn mới/Thuê dụng cụ</li>
             </ul>
             <div id="clock"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
                 <div class="tile">
+
                     <form asp-controller="OrderManagement" asp-action="UpdateGear" method="post">
 
                         <div class="tile-body">
@@ -636,10 +727,9 @@
                             </div>
                         </div>
                     </form>
-
                 </div>
-            </div>
 
+            </div>
         </div>
 
 
@@ -767,146 +857,8 @@
 
 
     </script>
-    <script>
-        $(document).ready(function () {
-            // Tăng số lượng
-            $('.btn-increase').click(function (e) {
-                e.preventDefault(); // Ngăn submit form
-                var quantityElement = $(this).siblings('.quantity-value');
-                var hiddenInput = $(this).siblings('.quantity-input');
-                var remainingQuantityElement = $(this).closest('.product-card').find('.remaining-quantity-value');
-                var currentQuantity = parseInt(quantityElement.text());
-                var remainingQuantity = parseInt(remainingQuantityElement.text());
-
-                // Kiểm tra nếu số lượng hiện tại nhỏ hơn số lượng còn lại
-                if (remainingQuantity > 0) {
-                    quantityElement.text(currentQuantity + 1);
-                    hiddenInput.val(currentQuantity + 1);  // Cập nhật giá trị của input ẩn
-                    remainingQuantityElement.text(remainingQuantity - 1);  // Giảm số lượng còn lại
-                } else {
-                    alert("Không thể tăng thêm, đã đạt tới số lượng tối đa.");
-                }
-            });
-
-            // Giảm số lượng
-            $('.btn-decrease').click(function (e) {
-                e.preventDefault(); // Ngăn submit form
-                var quantityElement = $(this).siblings('.quantity-value');
-                var hiddenInput = $(this).siblings('.quantity-input');
-                var remainingQuantityElement = $(this).closest('.product-card').find('.remaining-quantity-value');
-                var currentQuantity = parseInt(quantityElement.text());
-                var remainingQuantity = parseInt(remainingQuantityElement.text());
-
-                // Kiểm tra nếu số lượng hiện tại lớn hơn 0
-                if (currentQuantity > 0) {
-                    quantityElement.text(currentQuantity - 1);
-                    hiddenInput.val(currentQuantity - 1);  // Cập nhật giá trị của input ẩn
-                    remainingQuantityElement.text(remainingQuantity + 1);  // Tăng số lượng còn lại
-                } else {
-                    alert("Không thể giảm số lượng dưới 0.");
-                }
-            });
-        });
 
 
-    </script>
-    @*<script>
-    $(document).ready(function () {
-    var itemsPerPage = 3; // Số sản phẩm hiển thị trên mỗi trang
-    var currentPage = 1;  // Trang hiện tại
-    var totalItems = $('.product-card').length; // Tổng số sản phẩm
-    var totalPages = Math.ceil(totalItems / itemsPerPage); // Tổng số trang
-
-    // Hàm hiển thị sản phẩm cho trang hiện tại
-    function showPage(page) {
-    // Ẩn tất cả sản phẩm
-    $('.product-card').hide();
-
-    // Hiển thị sản phẩm của trang hiện tại
-    var startItem = (page - 1) * itemsPerPage;
-    var endItem = startItem + itemsPerPage;
-
-    $('.product-card').slice(startItem, endItem).show();
-
-    // Cập nhật nút phân trang
-    $('#pagination .page-item').removeClass('active');
-    $('#pagination .page-item[data-page="' + page + '"]').addClass('active');
-
-    // Kiểm tra trạng thái nút Lùi và Tiếp
-    if (page == 1) {
-    $('#prev-page').addClass('disabled');
-    } else {
-    $('#prev-page').removeClass('disabled');
-    }
-
-    if (page == totalPages) {
-    $('#next-page').addClass('disabled');
-    } else {
-    $('#next-page').removeClass('disabled');
-    }
-    }
-
-    // Tạo các nút phân trang
-    for (var i = 1; i <= totalPages; i++) {
-    $('<li class="paginate_button page-item" data-page="' + i + '"><a href="#" class="page-link">' + i + '</a></li>').insertBefore('#next-page');
-    }
-
-    // Xử lý sự kiện khi bấm vào các nút số trang
-    $('#pagination').on('click', '.page-item', function (e) {
-    e.preventDefault();
-    var page = $(this).data('page');
-    if (page) {
-    currentPage = page;
-    showPage(currentPage);
-    }
-    });
-
-    // Xử lý sự kiện khi bấm vào nút Lùi
-    $('#prev-page').click(function (e) {
-    e.preventDefault();
-    if (currentPage > 1) {
-    currentPage--;
-    showPage(currentPage);
-    }
-    });
-
-    // Xử lý sự kiện khi bấm vào nút Tiếp
-    $('#next-page').click(function (e) {
-    e.preventDefault();
-    if (currentPage < totalPages) {
-    currentPage++;
-    showPage(currentPage);
-    }
-    });
-
-    // Hiển thị trang đầu tiên
-    showPage(currentPage);
-    });
-
-
-    </script>
-
-
-    <script>
-    // Khi trang được tải, gán sự kiện cho trường tìm kiếm
-    $(document).ready(function () {
-    // Lắng nghe sự kiện khi người dùng nhập vào ô tìm kiếm
-    $('#searchInput').on('keyup', function () {
-    // Lấy giá trị từ ô tìm kiếm và chuyển thành chữ thường để không phân biệt chữ hoa/chữ thường
-    var searchValue = $(this).val().toLowerCase();
-
-    // Lặp qua tất cả các dòng sản phẩm trong bảng
-    $('.product-card').filter(function () {
-    // Lấy văn bản của sản phẩm, mô tả, và giá, rồi kiểm tra xem nó có khớp với giá trị tìm kiếm không
-    $(this).toggle($(this).text().toLowerCase().indexOf(searchValue) > -1);
-    });
-    });
-    });
-
-
-
-    </script>*@
-    <!-- Essential javascripts for application to work-->
     <script src="~/js/jquery-3.2.1.min.js"></script>
     <script src="~/js/popper.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
@@ -970,6 +922,49 @@
             }
         }
         ;
+    </script>
+    <script>
+        $(document).ready(function () {
+            // Tăng số lượng
+            $('.btn-increase').click(function (e) {
+                e.preventDefault(); // Ngăn submit form
+                var quantityElement = $(this).siblings('.quantity-value');
+                var hiddenInput = $(this).siblings('.quantity-input');
+                var remainingQuantityElement = $(this).closest('.product-card').find('.remaining-quantity-value');
+                var currentQuantity = parseInt(quantityElement.text());
+                var remainingQuantity = parseInt(remainingQuantityElement.text());
+
+                // Kiểm tra nếu số lượng hiện tại nhỏ hơn số lượng còn lại
+                if (remainingQuantity > 0) {
+                    quantityElement.text(currentQuantity + 1);
+                    hiddenInput.val(currentQuantity + 1);  // Cập nhật giá trị của input ẩn
+                    remainingQuantityElement.text(remainingQuantity - 1);  // Giảm số lượng còn lại
+                } else {
+                    alert("Không thể tăng thêm, đã đạt tới số lượng tối đa.");
+                }
+            });
+
+            // Giảm số lượng
+            $('.btn-decrease').click(function (e) {
+                e.preventDefault(); // Ngăn submit form
+                var quantityElement = $(this).siblings('.quantity-value');
+                var hiddenInput = $(this).siblings('.quantity-input');
+                var remainingQuantityElement = $(this).closest('.product-card').find('.remaining-quantity-value');
+                var currentQuantity = parseInt(quantityElement.text());
+                var remainingQuantity = parseInt(remainingQuantityElement.text());
+
+                // Kiểm tra nếu số lượng hiện tại lớn hơn 0
+                if (currentQuantity > 0) {
+                    quantityElement.text(currentQuantity - 1);
+                    hiddenInput.val(currentQuantity - 1);  // Cập nhật giá trị của input ẩn
+                    remainingQuantityElement.text(remainingQuantity + 1);  // Tăng số lượng còn lại
+                } else {
+                    alert("Không thể giảm số lượng dưới 0.");
+                }
+            });
+        });
+
+
     </script>
 </body>
 
