--- a/GreenGardenClient/GreenGardenClient/Views/TicketManagement/Index.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/TicketManagement/Index.cshtml
@@ -611,7 +611,7 @@
             </script>
            
             <li class="app-menu__item active">
-                <a class="app-menu__link" href="~/FoodAndDrink/Index">
+                <a class="app-menu__link" href="~/TicketManagement/Index">
                     <i class='app-menu__icon bx bx-receipt'></i> <!-- Receipt icon as alternative -->
                     <span class="app-menu__label">Quản lý vé</span>
                 </a>
@@ -740,9 +740,9 @@
 
         <div id="pagination" class="dataTables_paginate paging_simple_numbers">
             <ul class="pagination">
-                <li class="paginate_button page-item previous disabled" id="prev-page"><a href="#" class="page-link">Lùi</a></li>
+                <li class="paginate_button page-item previous disabled" id="prev-page"><a href="#" class="page-link">Trước</a></li>
                 <!-- Các nút số trang sẽ được tạo tự động -->
-                <li class="paginate_button page-item next" id="next-page"><a href="#" class="page-link">Tiếp</a></li>
+                <li class="paginate_button page-item next" id="next-page"><a href="#" class="page-link">Sau</a></li>
             </ul>
         </div>
 
