--- a/GreenGardenClient/GreenGardenClient/Views/Common/Event.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Common/Event.cshtml
@@ -345,7 +345,7 @@
                     <div class="container">
                         <div class="row align-items-center justify-content-center text-center">
                             <div class="col-md-5" data-aos="fade-up">
-                                <h1 class="mb-3 text-white">Những sự kiện tiêu biểu</h1>
+                                <h1 class="mb-3 text-white">Về Sự Kiện</h1>
                                 <p>Tại đây chúng tôi sẽ lưu giữ những khoảnh khắc,kỷ niệm khó quên khi có mặt tại sông quê.</p>
 
                             </div>
@@ -354,8 +354,13 @@
                 </div>
             </div>
             <div class="site-section">
-                <div class="container">
-
+                <div class="container" style="margin-top:20px">
+                    <div class="row justify-content-center mb-5">
+                        <div class="col-md-7 text-center">
+                            <h2 class="font-weight-bold">Những sự kiện của chúng tôi</h2>
+                            <p class="lead">Khám phá những sự kiện đa dạng và chất lượng hàng đầu của chúng tôi.</p>
+                        </div>
+                    </div>
 
                     <div class="row">
                         @if (events != null && events.Any())
@@ -535,6 +540,18 @@
             duration: 1200, // Đặt thời gian cho hiệu ứng (tùy chọn)
         });
     </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Tìm thẻ có class "site-section"
+            var targetElement = document.querySelector(".site-section");
+            if (targetElement) {
+                // Cuộn tới thẻ .site-section
+                targetElement.scrollIntoView({ behavior: "smooth", block: "start" });
+            }
+        });
+    </script>
+
+
     <script src="~/js/jquery-3.3.1.min.js"></script>
     <script src="~/js/jquery-migrate-3.0.0.js"></script>
     <script src="~/js/popper.min.js"></script>
