--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/ChangeUsagedate.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/ChangeUsagedate.cshtml
@@ -11,7 +11,7 @@
 <html lang="en">
 
 <head>
-    <title>Danh sách nhân viên | Quản trị Admin</title>
+    <title>Quản lí đơn hàng | Xem chi tiết chuyển ngày</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
