--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/GearDetail.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/GearDetail.cshtml
@@ -11,7 +11,7 @@
 <html lang="en">
 
 <head>
-    <title>Danh sách nhân viên | Quản trị Admin</title>
+    <title>Tạo đơn hàng | Chi tiết dụng cụ</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -266,10 +266,11 @@
     .product-image {
         text-align: center; /* Căn giữa hình ảnh */
         margin-bottom: 20px;
+        width: 50%;
     }
 
         .product-image img {
-            max-width: 80%; /* Giới hạn chiều rộng của ảnh (80% của khung chứa) */
+            max-width: 100%; /* Giới hạn chiều rộng của ảnh (80% của khung chứa) */
             height: auto;
             border-radius: 10px;
             transition: transform 0.2s ease-in-out;
