--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderCombo.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderCombo.cshtml
@@ -8,7 +8,7 @@
 <html lang="en">
 
 <head>
-    <title>Danh sách nhân viên | Quản trị Admin</title>
+    <title>Tạo đơn hàng | Đặt Combo</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
