--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderFood.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderFood.cshtml
@@ -10,7 +10,7 @@
 <html lang="en">
 
 <head>
-    <title>Danh sách nhân viên | Quản trị Admin</title>
+    <title>Tạo đơn hàng | Đặt đồ ăn</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -63,6 +63,7 @@
     .product-image img {
         max-width: 80px;
         border-radius: 5px;
+
     }
 
     .product-details {
